[package]
name = "course3_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
critical-section = { version = "1.1", features = ["std"]}
generic-array = "1.0.0"
tari_crypto = "0.22.0"
rand = "0.8.5"
